--- a/css/blog_post.css
+++ b/css/blog_post.css
@@ -1,11 +1,12 @@
 #blog-posts {
   text-align: center;
-  background-color: #F2F3F4;
-  width: 200px;
+  background-color: #F5DEB3;
+  width: 500px;
   height: 300px;
   padding: 20px;
-  border-radius: 10px;
+  border-radius: 20px;
   margin-right: 25px;
+  margin-left: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
