--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,30 @@
 #blog-posts {
   text-align: center;
-  background-color: #F2F3F4;
+  background-color: #dedede;
   width: 200px;
   height: 300px;
   padding: 20px;
+  margin-top: 2px;
+  margin-bottom: 10px;
   border-radius: 10px;
   margin-right: 25px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media(max-width:899px) {
+  #blog-posts {
+    text-align: center;
+    background-color: #dedede;
+    width: 300px;
+    height: 50px;
+    padding: 20px;
+    margin-top: 2px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    margin-right: 25px;
+    justify-content: center;
+    align-items: center;
+  }
 }
