--- a/css/blog_post.css
+++ b/css/blog_post.css
@@ -2,7 +2,7 @@
   text-align: center;
   background-color: #dedede;
   width: 500px;
-  height: 400px;
+  height: 420px;
   padding: 20px;
   border-radius: 10px;
   margin-left: 50px;
@@ -23,9 +23,23 @@
  }
 }
 
+#author-div {
+  font-size: 10px;
+  display: inline-flex;
+}
+
+#avatar {
+  height: 8%;
+  width: 8%;
+}
+
+#blog-info {
+  margin-left: 20px;
+}
+
 
 #card-image {
-  width: 50%;
+  width: 40%;
   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
   filter: grayscale(100%);
 }
