More media queries and added subscribe button.

--- a/css/main_site_style.css
+++ b/css/main_site_style.css
@@ -39,6 +39,7 @@ html * {
 }
 @media(min-width:900px) {
   #blog-post-container {
+    margin-left: 70px;
     grid-area: bp;
     display: flex;
     flex-wrap: wrap;
