--- a/css/blog_theme.css
+++ b/css/blog_theme.css
@@ -1,10 +1,11 @@
 html * {
   font-family: 'Open Sans', sans-serif;
+  
 }
 body {
-  /* display: contents; */
-  /* width: 9%;  */
+  display: contents;
 }
+
 a {
   text-decoration: none;
 }
